--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -53,6 +53,29 @@ h1 .sep { color: #666; padding: 0 .1em }
 #dirlist td.rev { text-align: right }
 #dirlist td.change { font-size: 85%; vertical-align: middle; white-space: nowrap }
 
+/* Log */
+tr.diff input { 
+ padding: 0 1em 0 1em;
+ margin: 0; 
+}
+
+div.buttons {
+ clear: left;
+}
+
+#anydiff {
+ margin: 0 0 1em;
+ float: left;
+}
+#anydiff form, #anydiff div, #anydiff h2 {
+ display: inline;
+}
+#anydiff input { 
+ vertical-align: baseline;
+ margin: 0 -0.5em 0 1em;
+}
+
+
 /* Styles for the revision log table
    (extends the styles for "table.listing") */
 #chglist { margin-top: 0 }
@@ -62,6 +85,7 @@ h1 .sep { color: #666; padding: 0 .1em }
  margin: .2em .5em 0 0;
  width: .8em; height: .8em;
 }
+#chglist td.diff { white-space: nowrap }
 #chglist td.change .comment { display: none }
 #chglist td.old_path { font-style: italic }
 #chglist td.date { font-size: 85%; vertical-align: top; padding-top: 0.55em; white-space: nowrap }
