--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -7,7 +7,7 @@
  margin-top: 1em;
  padding: .5em;
 }
-#overview dt {
+#overview dt.property {
  font-weight: bold;
  padding-right: .25em;
  position: absolute;
