--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -127,7 +127,7 @@ table.code tbody td {
 .h_aspat { color: #ffdf00 }
 .h_attribute { color: teal }
 .h_attributeunknown { color: red }
-.h_cdata { color: #ffdf00 }
+.h_cdata { color: #373 }
 .h_entity { color: purple }
 .h_number { color: #099 }
 .h_other { color: purple }
