--- a/htdocs/css/changeset.css
+++ b/htdocs/css/changeset.css
@@ -23,7 +23,8 @@
  margin-top: 0;
 }
 #overview .message { padding: 1em 0 1px }
-#overview dd.message p, #overview dd.message ul, #overview dd.message ol {
+#overview dd.message p, #overview dd.message ul, #overview dd.message ol,
+#overview dd.message pre {
  margin-bottom: 1em;
  margin-top: 0;
 }
