--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -46,6 +46,10 @@ dt.closedticket, dt.closedticket a { background-image: url(../closedticket.png) 
 dt.wiki, dt.wiki a { background-image: url(../wiki.png) !important }
 dt.milestone, dt.milestone a { background-image: url(../milestone.png) !important }
 
+/* styles for the 'changeset_long_messages' option */
+dd.changeset p { margin: 0; padding: 0 }
+dd.changeset ul { padding-left: 15px; }
+
 /* Styles for the 'changeset_show_files' option */
 dd.changeset .changes .add { color: #2e2 }
 dd.changeset .changes .delete { color: #e00 }
