--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -318,6 +318,13 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 #attachment br { clear: left }
 .attachment #preview { margin-top: 1em }
 
+/* Styles for the list of attachments. */
+#attachments { border: 1px outset #996; padding: 1em }
+#attachments .attachments { margin-left: 2em; padding: 0 }
+#attachments dt { display: list-item; list-style: square; }
+#attachments dd { font-style: italic; margin-left: 0; padding-left: 0; }
+
+
 /* Styles for tabular listings such as those used for displaying directory
    contents and report results. */
 table.listing {
