--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -46,6 +46,9 @@
  font-size: 100%;
  font-weight: normal;
 }
+#changelog .threading {
+	float: right;
+}
 .inlinebuttons input { 
  float: right;
  font-size: 70%;
