--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -98,6 +98,14 @@ label.disabled { color: #d7d7d7 }
 .buttons { margin: .5em .5em .5em 0 }
 .buttons form, .buttons form div { display: inline }
 .buttons input { margin: 1em .5em .1em 0 }
+.inlinebuttons input { 
+ font-size: 70%;
+ border-width: 1px;
+ border-style: dotted;
+ margin: 0;
+ padding: 0.1em;
+ background: none;
+}
 
 /* Header */
 #header hr { display: none }
