--- a/htdocs/css/code.css
+++ b/htdocs/css/code.css
@@ -67,7 +67,7 @@ table.code tbody td {
 /* Comments */
 .code-comment, .css_comment, .c_comment, .c_commentdoc, .c_commentline,
 .c_commentlinedoc, .h_comment,.pl_commentline, .p_commentblock,
-.p_commentline, .hphp_commentblock, .hphp_commentline,
+.p_commentline, .hphp_comment, .hphp_commentblock, .hphp_commentline,
 .yaml_comment {
  color: #998; 
  font-style: italic;
