--- a/htdocs/css/search.css
+++ b/htdocs/css/search.css
@@ -9,4 +9,6 @@
 #results dd { font-size: 80%; margin: 0; padding: 0 }
 #results .author, #results .date, #results .keywords { color: #090 }
 
+#quickjump { font-style: italic; font-weight: bold; }
+
 #paging { margin: 0 0 2em; text-align: center }
