--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -278,6 +278,21 @@ label.disabled { color: #d7d7d7 }
 }
 #prefs .buttons { text-align: right }
 
+/* Version information (browser, wiki, attachments) */
+#info {
+ background: #f7f7f0;
+ border: 1px solid #d7d7d7;
+ border-collapse: collapse;
+ border-spacing: 0;
+ clear: both;
+ width: 100%;
+}
+#info th, #info td { font-size: 85%; padding: 2px .5em; vertical-align: top }
+#info th { font-weight: bold; text-align: left; white-space: nowrap }
+#info td.message { width: 100% }
+#info .message ul { padding: 0; margin: 0 2em }
+#info .message p { margin: 0; padding: 0 }
+
 /* Wiki */
 .wikipage { padding-left: 18px }
 .wikipage h1, .wikipage h2, .wikipage h3 { margin-left: -18px }
