--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -52,6 +52,7 @@ dd.changeset p { margin: 0; padding: 0 }
 dd.changeset ul { padding-left: 15px; }
 
 /* Styles for the 'changeset_show_files' option */
+dd.changeset .changes { color: #aaa; font-size: 90%; }
 dd.changeset ul.changes { 
  padding-left: 0;
  list-style-type: none;
